--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@material/card": "^13.0.0",
+    "angular-jwt": "github:auth0/angular-jwt",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.3",
     "jquery": "^3.6.0",
